securing-workloads/assets/step4-jwt-issuer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-issuer
  labels:
    app: jwt-issuer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwt-issuer
  template:
    metadata:
      labels:
        app: jwt-issuer
    spec:
      containers:
      - name: jwt-issuer
        image: nginx:alpine
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jwt-script
          mountPath: /usr/share/nginx/html
        command: ["/bin/sh"]
        args:
        - -c
        - |
          [...]
      volumes:
      - name: jwt-script
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jwt-issuer
  labels:
    app: jwt-issuer
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: jwt-issuer
